# rigid_3d

./: .gitignore  Makefile  anim_sim.py  geometry.cpp  geometry.h  init.cpp  init.h  main.cpp  make_particle.py  params.h  physics.cpp  physics.h  plot_sim.py  pyv_sim.py  state.h  util.cpp  util.h
.github/workflows/: cmake-single-platform.yml  doc-build.yml
cc/: CMakeLists.txt
cc/examples/: CMakeLists.txt  create_particle.cpp  freefall.cpp  freefall_particle.cpp  two_collide.cpp
cc/include/: buoyancy.h  freefallsimulation.h  io.h  matrix.h  mesh_particle.h  params.h  particle.h  physics.h  quat.h  simulation.h  solver.h  state.h  util.h
cc/pybind11/: CMakeLists.txt  _freefallsimulation.cpp  _mesh_particle.cpp  _particle.cpp  _quat.cpp  _state.cpp
cc/src/: CMakeLists.txt  buoyancy.cpp  freefallsimulation.cpp  geometry.cpp  init.cpp  io.cpp  matrix.cpp  mesh_particle.cpp  particle.cpp  physics.cpp  quat.cpp  quat_new.cpp  simulation.cpp  solver.cpp  state.cpp  util.cpp
py/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
py/docs/: api.rst  conf.py  index.rst
py/examples/: energy_plot.py  ffsim_buoyancy.py
py/src/: freefallsimulation.py  particle.py  state.py
py/tests/: test_ffsimulation.py  test_int_ffsim.py  test_mesh_particle.py  test_particle.py  test_state.py
runs/: freefall.py  make_particle.py  plot_ts.py  pyv_anim.py
