[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rigidpy"
version = "0.0.1"
requires-python = ">=3.8"
authors = [{name = "Robert Schrom", email = "rschrom.science@gmail.com"}]
dependencies = ["pytest","matplotlib","numpy","scipy","pyvista"]
